idea/testData/multiplatform/kt44898/jvm/Concrete.kt
package sample

public <!ABSTRACT_CLASS_MEMBER_NOT_IMPLEMENTED!>class Concrete<!> : Base()
